[tool.poetry]
name = "summarize_cross_validation_score"
version = "0.1.0"
description = "summarizes the output of cross_validate function"
authors = ["Debananda Sarkar <sarkar.debananda.1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
